--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ section {
     font-size: 20px;
 }
 
-.docs div p:nth-child(2) code {
+.docs div p:nth-child(2) code, code.dark {
     background: #444;
     color: #fff;
 }
