--- a/web/css/main.css
+++ b/web/css/main.css
@@ -334,9 +334,9 @@ html {
   font-size: 62.5%; }
 
 body {
-  background: white;
+  background: #333333;
   font-family: "Titillium Web", sans-serif;
-  font-weight: 300; }
+  font-weight: 400; }
 
 #map {
   position: absolute;
@@ -359,7 +359,7 @@ header {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 10; }
+    z-index: 100; }
     header nav ul {
       margin: 0;
       padding: 0; }
@@ -391,12 +391,14 @@ header {
       line-height: 1.2;
       margin: 0;
       padding: 0;
-      color: #fff; }
+      color: #fff;
+      font-weight: normal; }
     header .title h2 {
       font-family: "Syncopate", sans-serif;
       font-size: 2.2rem;
       text-transform: uppercase;
-      color: #fff; }
+      color: #fff;
+      font-weight: normal; }
     header .title .get {
       text-align: center; }
       header .title .get a:link, header .title .get a:visited {
@@ -466,7 +468,8 @@ header {
       font-family: "Oswald", sans-serif;
       font-size: 6rem;
       margin: 0;
-      text-transform: uppercase; }
+      text-transform: uppercase;
+      font-weight: normal; }
   .content a:link, .content a:visited {
     color: #222;
     text-decoration: none; }
@@ -480,35 +483,44 @@ header {
   .content .demos li {
     position: relative;
     display: inline-block;
-    margin: 0 10px;
-    width: 100px;
-    height: 100px;
-    border: 3px solid #999999;
-    border-radius: 4px;
-    background: #eee;
-    cursor: pointer; }
-  .content .demos li:hover {
-    border: 3px solid #444444; }
-  .content .demos li span, .content .caption {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 10;
-    display: block;
-    padding: 4px 0;
-    background: #999;
-    color: #fff;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-size: 12px;
-    font-family: "Oswald", sans-serif; }
-  .content .caption a {
-    display: inline-block;
-    position: absolute;
-    right: 5px; }
-  .content .demos li:hover span {
-    background: #444; }
-  .content .demos .nm_crnode, .content .demos .nm_crimg {
-    display: none !important; }
+    margin: 1rem 1%;
+    width: 30%;
+    min-width: 20rem;
+    height: 25.6rem;
+    border: 2px solid #333333;
+    background: #eee; }
+    .content .demos li span, .content .demos li .caption {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      z-index: 10;
+      display: block;
+      padding: 0.4rem 0;
+      background: #333;
+      color: #fff;
+      text-align: center;
+      text-transform: uppercase;
+      letter-spacing: .1rem;
+      font-size: 1.6rem;
+      font-family: "Oswald", sans-serif; }
+    .content .demos li a.playground:link, .content .demos li a.playground:visited {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      background: transparent url(../img/console-g.png) no-repeat 50%;
+      width: 3rem;
+      height: 3rem;
+      z-index: 10; }
+    .content .demos li a.playground:hover, .content .demos li a.playground:active {
+      background-image: url(../img/console-r.png); }
+    .content .demos li .address, .content .demos li .location {
+      font-family: "Oswald", sans-serif;
+      position: absolute;
+      color: #333;
+      top: 1rem;
+      left: 0;
+      right: 0;
+      text-align: center; }
+    .content .demos li .location {
+      top: 50%; }
