Some text adjustments

--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -83,7 +83,7 @@ header {
                 color: #fff;
                 display: inline-block;
                 font-size: 3rem;
-                width: 12rem;
+                margin: 0 1rem;
 
                 a:link, a:visited {
                     padding: .8rem;
