--- a/web/css/main.css
+++ b/web/css/main.css
@@ -368,7 +368,7 @@ header {
         color: #fff;
         display: inline-block;
         font-size: 3rem;
-        width: 12rem; }
+        margin: 0 1rem; }
         header nav ul li a:link, header nav ul li a:visited {
           padding: .8rem;
           text-align: center;
