--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -55,14 +55,25 @@ body {
     right: 0;
     bottom: -3rem;
     left: 0;
-    z-index: -1;
 }
 
 header {
+
+    .overlay {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background: #000;
+        opacity: 0.65;
+        z-index: 10;
+    }
+
     position: relative;
     height: 64rem;
-    background: rgba(0,0,0,0.65);
     margin: 0;
+    overflow: hidden;
 
     &.page {
         height: 40rem;
@@ -111,6 +122,7 @@ header {
         left: 0;
         right: 0;
         text-align: center;
+        z-index: 11;
         // background: transparent url(../img/logo.png) no-repeat 50% 100%;
         padding-bottom: 8rem;
 
@@ -185,6 +197,7 @@ header {
         right: 1.5rem;
         margin: 0;
         padding: 0;
+        z-index: 11;
 
         li {
             cursor: pointer;
@@ -213,6 +226,7 @@ header {
             }
         }
     }
+
 }
 
 .content {
@@ -220,6 +234,17 @@ header {
     padding: 4rem;
     text-shadow: rgba(0, 0, 0, 0.3) 1px 0px 0px;
     line-height: 1.4;
+
+    a {
+        &:link, &:visited {
+            color: #8b2222;
+            text-decoration: none;
+        }
+
+        &:hover, &:active {
+            text-decoration: underline;
+        }
+    }
 
     &#main {
         background: $jherereddishold;
@@ -237,7 +262,7 @@ header {
 
         a {
             &:link, &:visited {
-                color: $jherereddishold;
+                color: #4169e1;
             }
         }
     }
@@ -248,7 +273,7 @@ header {
 
         a {
             &:link, &:visited {
-                color: $jherereddishold;
+                color: #4169e1;
             }
         }
 
@@ -258,17 +283,18 @@ header {
 
         code {
             display: inline-block;
-            padding: 3px;
+            padding: .3rem;
             border-radius: 3px;
             background: #F5F2F0;
-            color: #222;
-            font-size: 15px;
+            color: #333;
+            font-size: 1.4rem;
         }
 
         div {
             p:nth-child(2) code, code.dark {
-            background: #444;
-            color: #fff;
+                background: #333;
+                color: #fff;
+                font-size: 1.6rem;
             }
 
             p {
@@ -287,11 +313,8 @@ header {
 
     strong {
         font-weight: 400;
-        color: #fff;
-        background: #333;
-        display: inline-block;
-        padding: .2rem .5rem;
-        margin: .1rem 0;
+        text-transform: uppercase;
+        font-size: 120%;
     }
 
     section, header {
@@ -401,22 +424,10 @@ header {
     }
 }
 
-.content, footer {
-    a {
-        &:link, &:visited {
-            color: #222;
-            text-decoration: none;
-        }
-
-        &:hover, &:active {
-            text-decoration: underline;
-        }
-    }
-}
-
 footer {
     background: #fff;
     padding: 4rem 4rem 1rem 4rem;
+    position: relative;
 
     .links {
         max-width: 76.8rem;
@@ -426,6 +437,29 @@ footer {
         list-style-type: none;
         list-style-position: inside;
         padding: 0;
+    }
+
+    .social {
+        position: absolute;
+        right: 1rem;
+        top: 1rem;
+        z-index: 11;
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+        width: 27rem;
+        height: 2rem;
+        overflow: hidden;
+
+        li {
+            display: inline-block;
+
+            &.facebook {
+                position: relative;
+                top: -4px;
+                left: 15px;
+            }
+        }
     }
 
     small {
