--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -180,6 +180,10 @@ header {
                     background: transparent url(../img/fork.png) no-repeat 50%;
                 }
 
+                &.star span {
+                    background: transparent url(../img/star.png) no-repeat 50%;
+                }
+
             }
 
             a:hover, a:active {
